# missingtimesheet

./: Leave History 1 Nov. - 1 Dec .xlsx  Missing timesheet report instructions.md  Missing_Timesheet_Report.xlsx  README.md  Regional people allocations LIVE.xlsx  justfile  leave-history-46243-2026-jan-07.xlsx  pyproject.toml
.claude/: settings.local.json
.obsidian/: workspace.json
scripts/: check_line_counts.py
src/: __init__.py  config.py  database.py  date_utils.py  hello.py  leave_parser.py  main.py  report_generator.py
tests/: __init__.py
tests/e2e/: __init__.py  test_example.py
tests/integration/: __init__.py  test_example.py
tests/unit/: __init__.py  test_hello.py
